// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render with a testID 1`] = `
<span
  className="select_container"
>
  <span
    className="active_option"
  >
    Name (A to Z)
  </span>
  <select
    className="product_sort_container"
    data-test="foo"
    onChange={[MockFunction]}
    value="az"
  >
    <option
      key="az"
      value="az"
    >
      Name (A to Z)
    </option>
    <option
      key="za"
      value="za"
    >
      Name (Z to A)
    </option>
    <option
      key="lohi"
      value="lohi"
    >
      Price (low to high)
    </option>
    <option
      key="hilo"
      value="hilo"
    >
      Price (high to low)
    </option>
  </select>
</span>
`;

exports[`Select should render with default props 1`] = `
<span
  className="select_container"
>
  <span
    className="active_option"
  >
    Name (A to Z)
  </span>
  <select
    className="product_sort_container"
    onChange={[MockFunction]}
    value="az"
  >
    <option
      key="az"
      value="az"
    >
      Name (A to Z)
    </option>
    <option
      key="za"
      value="za"
    >
      Name (Z to A)
    </option>
    <option
      key="lohi"
      value="lohi"
    >
      Price (low to high)
    </option>
    <option
      key="hilo"
      value="hilo"
    >
      Price (high to low)
    </option>
  </select>
</span>
`;
